# war-room

./: .gitignore  CLAUDE.md  PRD-shogunate-v2.md  README.md  WAR_ROOM_PRD.md  cli.py  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.specs/: 2026-02-11-overnight-polish.md  2026-02-11-sprint-3-the-dojo.md  2026-02-13-vox-architecture-bridge.md
app/: globals.css  layout.tsx  manifest.ts  sw.ts
app/chat/: page.tsx
app/dashboard/: page.tsx
app/dojo/: page.tsx
app/missions/: page.tsx
app/offline/: page.tsx
components/: agent-detail.tsx  agent-sidebar.tsx  board-section.tsx  create-proposal-dialog.tsx  event-feed.tsx  kanban-board.tsx  kanban-column.tsx  mission-detail.tsx  mission-kanban-card.tsx  mission-queue.tsx  mission-table-view.tsx  project-card.tsx  project-detail.tsx  project-kanban.tsx  project-overview.tsx  proposals-section.tsx  rpg-stat-bar.tsx  stats-bar.tsx  stealth-card.tsx  step-card.tsx  task-card.tsx  task-kanban-card.tsx  task-row.tsx  toast-provider.tsx
components/chat/: chat-input.tsx  message-area.tsx  (+2 more)
docs/: hud-layout.md  shogunate-engine-manual.md
engine/: config.py  events.py  executor.py  memory.py  mission.py  models.py  poller.py  proposal.py  relationships.py  schema-v2.sql  seed-v2.sql  war-room-api.sh
lib/: chat.ts  claude-cli.ts  data.ts  motion.ts  queries.ts  realtime.ts  role-cards.ts  rpg-stats.ts  supabase-server.ts  supabase.ts  toast-events.ts  types.ts
public/: workflow.html
scripts/: migrate-tasks-to-missions.ts
src-tauri/: Cargo.toml  tauri.conf.json
tests/: test_plan_sync.sh
(+56 files in other folders)
